# minimind

./: MUON_IMPLEMENTATION_SUMMARY.md  README.md  README_en.md  eval_model.py  requirements.txt  test_muon_setup.py
model/: model_minimind.py
scripts/: QUICKSTART.md  decode_vocab.py  prepare_pretrain_data.py  prepare_sft_data.py  setup_training_data.sh  translate_tokenizer.py
scripts/train_tokenizer_rust/: Cargo.toml  README.md  build.sh  install_rust.sh  run.sh
scripts/train_tokenizer_rust/src/: main.rs
trainer/: muon.py  train_distill_reason.py  train_distillation.py  train_dpo.py  train_dpo_muon.py  train_full_sft.py  train_full_sft_distill.py  train_full_sft_muon.py  train_lora.py  train_pretrain.py  train_pretrain_muon.py
