[package]
name = "train_tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.20.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

